--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.github.zuacaldeira</groupId>
     <artifactId>flex-app-backend</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0</version>
     <packaging>ejb</packaging>
 
     <name>flex-app-backend</name>
