--- a/pom.xml
+++ b/pom.xml
@@ -271,8 +271,8 @@
                 <version>2.5.3</version>
                 <configuration>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
-                    <useReleaseProfile>false</useReleaseProfile>
-                    <releaseProfiles>release</releaseProfiles>
+                    <!--useReleaseProfile>false</useReleaseProfile>
+                    <releaseProfiles>release</releaseProfiles-->
                     <goals>deploy</goals>
                 </configuration>
             </plugin>            
