Add runtime DBException on save() backend calls.

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.test.skip>true</maven.test.skip>      
+        <maven.test.skip>false</maven.test.skip>      
     </properties>
 
     <distributionManagement>
