--- a/pom.xml
+++ b/pom.xml
@@ -171,11 +171,27 @@
                 </executions>
             </plugin>
             
+            <!-- MAVEN SUREFIRE PLUGIN -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20.1</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/*TestIT.*</exclude>
+                    </excludes>                
+                </configuration>
+            </plugin>
+            
             <!-- MAVEN FAILSAFE PLUGIN -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.20.1</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                    <skipITs>false</skipITs>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -186,6 +202,37 @@
                 </executions>
             </plugin>
 
+            <!-- JETTY AND FAILSAFE -->
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.2.2.v20140723</version>
+                <configuration>
+                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                    <stopPort>8005</stopPort>
+                    <stopKey>STOP</stopKey>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>start-jetty</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>start</goal>
+                        </goals>
+                        <configuration>
+                            <scanIntervalSeconds>0</scanIntervalSeconds>
+                            <daemon>true</daemon>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>stop-jetty</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>stop</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>            
             <!-- MAVEN JACOCO PLUGIN -->
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -235,7 +282,26 @@
             </plugin>            
         </plugins>
     </build>
-
+    
+    <!-- MAVEN SUREFIRE AND FAILSAFE REPORTING PLUGIN -->
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.20.1</version>
+                <reportSets>
+                    <reportSet>
+                        <id>integration-tests</id>
+                        <reports>
+                            <report>failsafe-report-only</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+        </plugins>
+    </reporting>
+  
     <profiles>
         <profile>
             <id>release</id>
