--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,6 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.20.1</version>
                 <configuration>
-                    <skipTests>true</skipTests>
                     <skipITs>false</skipITs>
                 </configuration>
                 <executions>
@@ -202,37 +201,6 @@
                 </executions>
             </plugin>
 
-            <!-- JETTY AND FAILSAFE -->
-            <plugin>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.2.2.v20140723</version>
-                <configuration>
-                    <scanIntervalSeconds>10</scanIntervalSeconds>
-                    <stopPort>8005</stopPort>
-                    <stopKey>STOP</stopKey>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>start-jetty</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>start</goal>
-                        </goals>
-                        <configuration>
-                            <scanIntervalSeconds>0</scanIntervalSeconds>
-                            <daemon>true</daemon>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>stop-jetty</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>stop</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>            
             <!-- MAVEN JACOCO PLUGIN -->
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -240,18 +208,18 @@
                 <version>0.7.9</version>
                 <executions>
                     <execution>
+                        <id>default-prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
                     <execution>
-                        <id>report</id>
-                        <phase>prepare-package</phase>
+                        <id>pre-integration-test</id>
                         <goals>
-                            <goal>report</goal>
+                            <goal>prepare-agent-integration</goal>
                         </goals>
                     </execution>
-                </executions>
+                </executions>            
             </plugin>
             
             <!-- MAVEN NEXUS-STAGING PLUGIN -->
@@ -362,6 +330,6 @@
                     </plugin> 
                 </plugins>        
             </build>
-        </profile>        
+        </profile>   
     </profiles>
 </project>
