--- a/pom.xml
+++ b/pom.xml
@@ -255,14 +255,14 @@
     <reporting>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.20.1</version>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>                
+                <version>0.7.9</version>
                 <reportSets>
                     <reportSet>
                         <id>integration-tests</id>
                         <reports>
-                            <report>failsafe-report-only</report>
+                            <report>jacoco-report</report>
                         </reports>
                     </reportSet>
                 </reportSets>
