--- a/pom.xml
+++ b/pom.xml
@@ -24,13 +24,14 @@
         <connection>scm:git:https://github.com/zuacaldeira/flex-app-backend</connection>
         <developerConnection>scm:git:https://github.com/zuacaldeira/flex-app-backend.git</developerConnection>
         <url>https://github.com/zuacaldeira/flex-app-backend</url>
-      <tag>flex-app-backend-1.1.1</tag>
-  </scm>
+        <tag>flex-app-backend-1.1.1</tag>
+    </scm>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.test.skip>false</maven.test.skip>      
+        <amazon.client.path>/Users/zua/Work/apps/paapi/build/awsJavaClient.jar</amazon.client.path>
     </properties>
 
     <distributionManagement>
@@ -133,6 +134,19 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.9.1</version>
         </dependency>
+
+        <!--dependency>
+            <groupId>com.ECS.client.jax</groupId>
+            <artifactId>aws-java-client</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${amazon.client.path}</systemPath>
+        </dependency-->
+        <dependency>
+            <groupId>de.malkusch.amazon.product-advertising-api</groupId>
+            <artifactId>amazon-ecs-api</artifactId>
+            <version>1.1.2</version>
+        </dependency>    
     </dependencies>
 
 
