--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,13 @@
             <version>1.22</version>
             <type>jar</type>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.zuacaldeira</groupId>
+            <artifactId>flex-app-backend</artifactId>
+            <version>1.1.5-SNAPSHOT</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
