--- a/src/main/resources/ogm.properties
+++ b/src/main/resources/ogm.properties
@@ -2,6 +2,8 @@
 #URI=bolt://localhost
 # Set the username and password to your Neo4j 3.0+ database.
 driver=org.neo4j.ogm.drivers.http.driver.HttpDriver
-URI=http://neo4j:unicidade@localhost:7474
+URI=https://a7ee557f.ngrok.io
+username="neo4j"
+password="unicidade"
 indexes.auto=assert
 trust.strategy = ACCEPT_UNSIGNED
