--- a/src/main/resources/ogm.properties
+++ b/src/main/resources/ogm.properties
@@ -2,7 +2,7 @@
 #URI=bolt://localhost
 # Set the username and password to your Neo4j 3.0+ database.
 driver=org.neo4j.ogm.drivers.http.driver.HttpDriver
-URI=https://a7ee557f.ngrok.io
+URI=http://a7ee557f.ngrok.io
 username="neo4j"
 password="unicidade"
 indexes.auto=assert
