Update dependencies to latest versions.

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,16 @@
             <artifactId>neo4j-ogm-core</artifactId>
             <version>2.1.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-ogm-api</artifactId>
+            <version>2.1.5</version>
+        </dependency>
+        <dependency> <!-- If you're using the HTTP driver -->
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-ogm-http-driver</artifactId>
+            <version>2.1.5</version>
+        </dependency>
         <dependency> <!-- If you're using the EMBEDDED driver -->
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-ogm-embedded-driver</artifactId>
