--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
         <connection>scm:git:https://github.com/zuacaldeira/flex-app-backend</connection>
         <developerConnection>scm:git:https://github.com/zuacaldeira/flex-app-backend.git</developerConnection>
         <url>https://github.com/zuacaldeira/flex-app-backend</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -125,7 +125,12 @@
             <groupId>de.malkusch.amazon.product-advertising-api</groupId>
             <artifactId>amazon-ecs-api</artifactId>
             <version>1.1.2</version>
-        </dependency>    
+        </dependency>  
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>2.1.7</version>
+        </dependency>
     </dependencies>
 
 
