--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.zuacaldeira</groupId>
     <artifactId>flex-app-backend</artifactId>
-    <version>1.1.13</version>
+    <version>1.1.14-SNAPSHOT</version>
     <packaging>ejb</packaging>
     <name>flex-app-backend</name>
     <description>Flex App backend.</description>
@@ -24,7 +24,7 @@
         <connection>scm:git:https://github.com/zuacaldeira/flex-app-backend</connection>
         <developerConnection>scm:git:https://github.com/zuacaldeira/flex-app-backend.git</developerConnection>
         <url>https://github.com/zuacaldeira/flex-app-backend</url>
-        <tag>flex-app-backend-1.1.13</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
