Use graphdb configuration for production db.

--- a/src/main/resources/ogm.properties
+++ b/src/main/resources/ogm.properties
@@ -1,9 +1,5 @@
-#driver=org.neo4j.ogm.drivers.bolt.driver.BoltDriver
-#URI=bolt://localhost
-# Set the username and password to your Neo4j 3.0+ database.
-driver=org.neo4j.ogm.drivers.http.driver.HttpDriver
-URI=http://c8a338df.ngrok.io
-username="neo4j"
-password="unicidade"
-indexes.auto=assert
-trust.strategy = ACCEPT_UNSIGNED
+# OGM Properties
+driver=org.neo4j.ogm.drivers.bolt.driver.BoltDriver
+URI=System.getenv("GRAPHENEDB_BOLT_URL")
+username=System.getenv("GRAPHENEDB_BOLT_USER")
+password=System.getenv("GRAPHENEDB_BOLT_PASSWORD")
