--- a/pom.xml
+++ b/pom.xml
@@ -45,40 +45,33 @@
     </distributionManagement>
 
     <dependencies>
-
-        <!-- Only add if you're using the HTTP driver -->
-        
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>23.0</version>
-            <type>jar</type>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.1.0</version>
+            <classifier>no_aop</classifier>
+            <scope>test</scope>
         </dependency>
-
         <dependency> 
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-ogm-core</artifactId>
-            <version>3.0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-ogm-api</artifactId>
-            <version>3.0.2</version>
+            <version>2.1.5</version>
         </dependency>
         <dependency> <!-- If you're using the BOLT driver -->
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-ogm-bolt-driver</artifactId>
-            <version>3.0.2</version>
+            <version>2.1.5</version>
         </dependency>
         <dependency> <!-- If you're using the EMBEDDED driver -->
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-ogm-embedded-driver</artifactId>
-            <version>3.0.2</version>
+            <version>2.1.5</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-ogm-test</artifactId>
-            <version>3.0.2</version>
+            <version>2.1.5</version>
             <scope>test</scope>
             <type>jar</type>
         </dependency>
@@ -100,11 +93,6 @@
             <version>8.0</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.7</version>
-        </dependency>        
 
         <!--dependency>
             <groupId>com.ECS.client.jax</groupId>
@@ -158,8 +146,16 @@
                 <configuration>
                     <excludes>
                         <exclude>**/*TestIT.*</exclude>
-                    </excludes>                
+                    </excludes>  
+                    <threadCount>1</threadCount>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-testng</artifactId>
+                        <version>2.20.1</version>
+                    </dependency>                    
+                </dependencies>
             </plugin>
             
             <!-- MAVEN FAILSAFE PLUGIN -->
