--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,9 @@
             <artifactId>neo4j-ogm-core</artifactId>
             <version>2.1.5</version>
         </dependency>
-        <dependency> <!-- If you're using the BOLT driver -->
+        <dependency> <!-- If you're using the HTTP driver -->
             <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-ogm-bolt-driver</artifactId>
+            <artifactId>neo4j-ogm-http-driver</artifactId>
             <version>2.1.5</version>
         </dependency>
         <dependency> <!-- If you're using the EMBEDDED driver -->
