--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.zuacaldeira</groupId>
     <artifactId>flex-app-backend</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>1.2.1</version>
     <packaging>war</packaging>
     <name>flex-app-backend</name>
     <description>Flex App backend.</description>
@@ -31,7 +31,7 @@
         <connection>scm:git:https://github.com/zuacaldeira/flex-app-backend</connection>
         <developerConnection>scm:git:https://github.com/zuacaldeira/flex-app-backend.git</developerConnection>
         <url>https://github.com/zuacaldeira/flex-app-backend</url>
-      <tag>flex-app-backend-1.1.39</tag>
+      <tag>flex-app-backend-1.2.1</tag>
   </scm>
 
     <distributionManagement>
