--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <connection>scm:git:https://github.com/zuacaldeira/flex-app-backend</connection>
         <developerConnection>scm:git:https://github.com/zuacaldeira/flex-app-backend.git</developerConnection>
         <url>https://github.com/zuacaldeira/flex-app-backend</url>
-      <tag>flex-app-backend-1.1.39</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
